GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/float_overflow.deca
// Test : overflow de float
// But : interdire les overflows de float.
// Type d'erreur : erreur syntaxique
// Résultat attendu : Float overflow

{
  float x = 3.4028236E38;
}